# cli

./: .boringcache.env.example  .boringcache.toml  .comprehension  .gitignore  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  Gemfile  INSTALLATION.md  LICENSE.md  Makefile  QA_PLAN_CLI_ENCRYPTION_SECURITY.md  README.md  REGISTRY_PROXY_BUG_NOTES.md  build_linux_binaries.rb  cleanup_github.sh  cleanup_github_all.sh  install.sh  mise.toml  openapi.json  openapi.v2.json
.cargo/: config.toml
.claude/: settings.local.json
.comprehension/: README.md  agent-working-contract.md  cli-structure.md  feature-map-cache-lifecycle.md  feature-map-overview.md  feature-map-proxy-and-adapters.md  feature-map-workspace-auth-config.md  file-coverage-index.md  intent-and-context-gaps.md  support-and-reachability.md
.githooks/: pre-commit
.github/: SECURITY.md  copilot-instructions.md  dependabot.yml
.github/docker/: base-image.Dockerfile
.github/workflows/: cache-registry-benchmarks.yml  ci.yml  dependabot-auto-merge.yml  e2e.yml  integrity-e2e.yml  publish-images.yml  release.yml  sccache-benchmark.yml  serve-registry-e2e.yml  validate-images.yml  verify.yml
.planning/: e2e_memory.md
ci/e2e/: e2e-adapter-suite.sh  e2e-framework.sh  e2e-helpers.sh  e2e-local-adapter-commands.sh  e2e-nx-go-test.sh  e2e-remote-tag.sh  request-metrics-summary.py
docs/: README.md  adapter-cache-profiles.md  adapter-commands.md  adapter-contract-matrix.md  adapter-spec-guardrails.md  archive-mode.md  bazel-mistake-ledger.md  development.md  github-actions.md  gradle-maven-mistake-ledger.md  oci-kv-path-audit.md  oci-mistake-ledger.md  onboard.md  performance-learning-log.md  proxy-mode.md  quick-start.md  remote-cache-transfer-profiles.md  sccache-mistake-ledger.md  terminal-ux-roadmap.md  tool-guides.md  turbo-nx-mistake-ledger.md
docs/adr/: 0001-engine-boundary.md  0002-proxy-engine-plan-b.md  0003-runner-proxy-optimization-roadmap.md  0004-oci-large-blob-stream-through.md  0005-borrowed-upload-sessions-and-blob-cache-policy.md  0006-cache-session-trace-and-oci-negative-cache.md  0007-docker-human-tag-registry-identity.md  0007-docker-immutable-run-refs-and-alias-promotion.md  0008-unified-repo-config-plan-lifecycle.md  0009-launch-maintenance-contract-and-performance-review.md  0010-package-manager-cas-pkg-v1.md  README.md
docs/comprehension/: README.md  agent-working-contract.md  cache-scope-model.md  cli-structure.md  feature-map-cache-lifecycle.md  feature-map-overview.md  feature-map-proxy-and-adapters.md  feature-map-workspace-auth-config.md  file-coverage-index.md  intent-and-context-gaps.md  support-and-reachability.md
docs/contracts/: machine-output.md  readiness.md
images/bookworm/: Dockerfile
images/bookworm-build/: Dockerfile
install-web/: _config.yml  index.html  install.sh
scripts/: cargo-flow.sh  cli-version.sh  e2e-adapter-suite.sh  e2e-all-adapters-http-test.sh  e2e-auth.sh  e2e-bazel-real-test.sh  e2e-cli-contract-test.sh  e2e-cli-core-test.sh  e2e-cli-integrity-test.sh  e2e-docker-buildkit-registry-test.sh  e2e-dual-proxy-contention-test.sh  e2e-framework.sh  e2e-helpers.sh  e2e-local-adapter-commands.sh  e2e-nx-go-test.sh  e2e-prefetch-readiness-test.sh  e2e-remote-tag.sh  e2e-sccache-test.sh  e2e-security-test.sh  e2e-tool-bazel-test.sh  e2e-tool-gradle-test.sh  e2e-tool-hugo-test.sh  e2e-tool-maven-test.sh  e2e-tool-sccache-test.sh  e2e-tool-turbo-test.sh  install-sccache.sh  release.sh  request-metrics-summary.py  rust-version.sh  test-installer-trust.sh  verify-rust-version-sync.sh
scripts/ci/: docker-build-cli-artifact.sh  run-with-rust-cache-env.sh
skills/cli-sccache-release-ops/: SKILL.md
src/: api.rs  archive.rs  auth.rs  cache_adapter.rs  cas_file.rs  cas_oci.rs  cas_transport.rs  ci_detection.rs  cli.rs  compression.rs  config.rs  encryption.rs  error.rs  exit_code.rs  git.rs  github_event.rs  http_client.rs  json_output.rs  lib.rs  main.rs  multipart_upload.rs  platform.rs  progress.rs  project_config.rs  request_metrics.rs  retry_resume.rs  signing.rs  tag_utils.rs  telemetry.rs  test_env.rs  transfer.rs  types.rs  ui.rs  upload_receipts.rs  utils.rs
src/adapters/: mod.rs
src/api/: client.rs  mod.rs  models.rs
src/cache/: adapter.rs  archive.rs  archive_transfer.rs  cas_file.rs  cas_oci.rs  cas_publish.rs  cas_restore.rs  file_materialize.rs  mod.rs  multipart_upload.rs  receipts.rs  transfer.rs  transport.rs
src/cache_operations/: delete.rs  download.rs  mod.rs  upload.rs
src/chunks/: atomic.rs  cdc.rs  downloader.rs  mod.rs  store.rs  uploader.rs
src/ci_detection/: context.rs  detect.rs  mod.rs  tests.rs
src/cli/: adapters.rs  app.rs  auth.rs  cache.rs  config.rs  dispatch.rs  mod.rs  preprocess.rs  proxy.rs  tests.rs  workspace.rs
src/command_support/: concurrency.rs  mod.rs  save_support.rs  specs.rs  workspace.rs
src/commands/: adapter.rs  audit.rs  auth.rs  cas_publish.rs  cas_restore.rs  check.rs  config.rs  dashboard.rs  delete.rs  doctor.rs  file_materialize.rs  go_cacheprog.rs  inspect.rs  login.rs  ls.rs  misses.rs  mod.rs  mount.rs  onboard.rs  optimize.rs  proxy_exec.rs  restore.rs  run.rs  save.rs  save_support.rs  serve.rs  sessions.rs  setup_encryption.rs  signature_policy.rs  status.rs  tag.rs  tags.rs  token.rs  upload_receipts.rs  utils.rs  workspaces.rs
src/config/: env.rs  mod.rs  model.rs  source.rs  store.rs  tests.rs
src/encryption/: crypto.rs  errors.rs  identity.rs  mod.rs  passphrase.rs  tests.rs
src/error/: classify.rs  convert.rs  kinds.rs  mod.rs  tests.rs
src/git/: context.rs  detect.rs  mod.rs  normalize.rs  tests.rs
src/manifest/: apply.rs  builder.rs  cache.rs  diff.rs  (+3 more)
tests/: api_behavior_tests.rs  api_contract_tests.rs  archive_performance_tests.rs  audit_command_tests.rs  cas_adapter_integration_tests.rs  cli_workflow_tests.rs  compression_tests.rs  integration_tests.rs  machine_output_contract_tests.rs  onboard_command_tests.rs  run_command_tests.rs  run_proxy_e2e_tests.rs  save_missing_paths_tests.rs  save_workspace_flag_tests.rs  serve_tests.rs  simple_tests.rs  workspace_injection_tests.rs
(+291 files in other folders)
